# docker-droplet

./: .bumpversion.cfg  .cspell.json  .gitignore  .quickdocs.yml  CONTRIBUTING.md  LICENSE.md  MAIFEST.in  MANIFEST.in  README.md  environment.yml  jobs.yml  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  template.yml  todo.md
ansible/inventory/: digitalocean.py
ansible/roles/base/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
docker_droplet/: config.tf  down.py  exceptions.py  main.py  terraform.tfstate  terraform.tfstate.backup  up.py
docker_droplet/.terraform/plugins/linux_amd64/: lock.json
docker_droplet/ansible/inventory/: digitalocean.py
docker_droplet/ansible/roles/base/tasks/: main.yml
docker_droplet/ansible/roles/docker/meta/: main.yml
docker_droplet/docs/: conf.py  docker_droplet.ansible.inventory.rst  docker_droplet.ansible.rst  docker_droplet.rst  docker_droplet.terraform.rst  modules.rst
docker_droplet/terraform/: digitalocean.jinja2  template.py
docker_droplet/tests/: .gitkeep  test_interface.py  test_template.py
docs/: conf.py  index.rst
docs/sphinx/: conf.py
src/: __init__.py  __main__.py  down.py  up.py
src/ansible/inventory/: __main__.py
src/ansible/roles/base/tasks/: main.yml
src/ansible/roles/docker/tasks/: main.yml
src/terraform/: providers.jinja2  template.py
terraform/: digitalocean.tf  providers.tf
test/: test_interface.py  test_template.py
tests/: test_interface.py  test_template.py
