[metadata]
name = docker_droplet
version = 1.0.8
description = Create a single digital ocean droplet and provision it to run the docker engine over a simple cli
url = https://github.com/JoelLefkowitz/docker-droplet
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
languages = Python
frameworks = Ansible Terraform Docker
paradigms = Object Oriented Programming
status = Stable
project_type = Published on pypi
