[metadata]
name = docker_droplet
version = 1.0.8

description = Create a single digital ocean droplet and provision it to run the docker engine over a simple cli.
url = https://github.com/JoelLefkowitz/docker-droplet

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    digitalocean
    droplet
    docker

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
status = Stable
homepage = https://docker-droplet.readthedocs.io

languages = 
    Python

frameworks = 
    Ansible
    Terraform
    Docker

paradigms = 
    Object oriented programming
    
[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    